--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server",
-    "start": "nodemon server/api/index",
-    "build": "webpack --mode=production"
+    "dev:client": "webpack-dev-server",
+    "dev:server": "nodemon server/index",
+    "dev": "npm-run-all --parallel --silent dev:*",
+    "start": "node server/index.js",
+    "build": "webpack --mode=production",
+    "public": "webpack-dev-server --public myapp.test:80"
   },
   "repository": {
     "type": "git",
